API documentation is added